--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Milton, John, 1608-1674'
 - !lcsh 'Poets, English -- Early modern, 1500-1700 -- Biography'
+- GITenberg
 title: Milton
 url: http://www.gutenberg.org/ebooks/22286
